# project_ariac

./: .travis.rosinstall  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  problem.pddl
Protege Ontology/: Ariac_Ontology.owl
config/: final.config  final_config.yaml  qual1a_config.yaml  qual1b_config.yaml  qual2a_config.yaml  qual2b_config.yaml  qual3a_config.yaml  team_conf.yaml
include/: manageOrder.hpp  moveArm.hpp
include/project_ariac/: Conveyor.hpp  Interface.hpp  Manager.hpp  Part.hpp  Sensor.hpp  Sensor_tf.hpp  UR10_Control.hpp  UR10_JointControl.hpp
launch/: pddl.launch  pickPlace.launch  pickPlace_qual1a.launch  pickPlace_qual1b.launch  project_ariac.launch  project_ariac_qual_1a.launch  project_ariac_qual_1b.launch  rviz.launch  ur10_moveit.launch
pddl/: ariac-domain.pddl  ariac-problem.pddl  updated_ariac-problem.pddl
src/: Conveyor.cpp  Interface.cpp  Manager.cpp  Node.cpp  Sensor_tf.cpp  UR10_Contorl.cpp  UR10_Control.cpp  UR10_JointControl.cpp  example_project_ariac_node.cpp  manageOrder.cpp  moveArm.cpp  project_ariac_node.cpp  qual1.cpp  qual1a.cpp  qual1b.cpp  temp.cpp
srv/: getSpeed.srv  pickup.srv  place.srv
