<?xml version="1.0"?>
<package format="2">
  <name>project_ariac</name>
  <version>0.0.1</version>
  <description>An ARIAC competitor's package.</description>

  <maintainer email="rnbhadeshiya@gmail.com">Ravi Bhadeshiya</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>message_generation</depend>

</package>

