<?xml version="1.0"?>
<package format="2">
  <name>project_ariac</name>
  <version>0.0.2</version>
  <description>An ARIAC competitor's package.</description>

  <maintainer email="rnbhadeshiya@gmail.com">Ravi Bhadeshiya</maintainer>

  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
</package>
